# rust-discord-bot-template

./: Cargo.toml  README.md
src/: bot.rs  config.rs  main.rs
src/bot/: commands.rs  events.rs  utils.rs
src/services/: database.rs
